Changed logic, added case for complex basked