@@ -3,6 +3,7 @@ package org.bnppf;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -13,6 +14,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class BookStoreTest {
     private final BookStore bookStore = new BookStore();
+
+    @Test
+    void duplicateBooksShouldNotGetDiscount() {
+        assertEquals(100.0, bookStore.calculatePrice(List.of("Clean Code", "Clean Code")));
+    }
 
     @Test
     void emptyBasketShouldCostZero() {
@@ -36,17 +42,24 @@ class BookStoreTest {
 
     @Test
     void fourDifferentBooksShouldHaveTwentyPercentDiscount() {
-        assertEquals(160.0, bookStore.calculatePrice(List.of("Clean Code", "Clean Coder", "Clean Architecture", "Test Driven Development")));
+        assertEquals(160.0, bookStore.calculatePrice(List.of("Clean Code", "Clean Coder", "Clean Architecture", "TDD")));
     }
 
     @Test
     void fiveDifferentBooksShouldHaveTwentyFivePercentDiscount() {
         assertEquals(187.5, bookStore.calculatePrice(List.of("Clean Code", "Clean Coder", "Clean Architecture",
-                "Test Driven Development", "Working Effectively With Legacy Code")));
+                "TDD", "Legacy Code")));
     }
 
     @Test
-    void duplicateBooksShouldNotGetDiscount() {
-        assertEquals(100.0, bookStore.calculatePrice(List.of("Clean Code", "Clean Code")));
+    void testComplexBasket() {
+        List<String> books = Arrays.asList(
+                "Clean Code", "Clean Code",
+                "Clean Coder", "Clean Coder",
+                "Clean Architecture", "Clean Architecture",
+                "TDD",
+                "Legacy Code"
+        );
+        assertEquals(320.0, bookStore.calculatePrice(books));
     }
 }
